@@ -24,7 +24,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.4
+Release: 0.5
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -586,6 +586,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Nov 23 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.5
+- remove (broken) test programs trb.c and tgi.c.
+
 * Mon Nov 21 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.4
 - rollback: move score board into transaction elements and eliminate.
 - rollback: adjust installed package counts when rollback downgrading.
