@@ -12,6 +12,7 @@
 	- rollback: move score board into transaction elements and eliminate.
 	- rollback: adjust installed package counts when rollback downgrading.
 	- rollback: don't force erase rpmdb headers, rollback downgrade will do.
+	- remove (broken) test programs trb.c and tgi.c.
 
 4.4.2 -> 4.4.3:
 	- start 4.4.3 devel.
